--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,7 @@
         <java.version>1.8</java.version>
         <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
 
-
-        <fastjson.version>1.2.29</fastjson.version>
+        <mysql.version>5.1.32</mysql.version>
     </properties>
 
     <!--依赖版管理-->
@@ -45,6 +44,12 @@
                 <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <!-- mysql驱动 -->
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -66,15 +71,7 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
-            <!--<scope>provided</scope>-->
         </dependency>
-        <!-- alibaba工具包 -->
-        <!--<dependency>-->
-            <!--<groupId>com.alibaba</groupId>-->
-            <!--<artifactId>fastjson</artifactId>-->
-            <!--<version>${fastjson.version}</version>-->
-        <!--</dependency>-->
-
     </dependencies>
 
     <build>
