--- a/lzw-item/lzw-item-interface/pom.xml
+++ b/lzw-item/lzw-item-interface/pom.xml
@@ -5,12 +5,27 @@
 
     <parent>
         <artifactId>lzw-item</artifactId>
-        <groupId>com.lzw</groupId>
-        <version>${project.version}</version>
+        <groupId>com.lzw.service</groupId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>lzw-item-interface</artifactId>
+    <groupId>com.lzw.service</groupId>
+    <version>1.0.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-
+    <dependencies>
+        <dependency>
+            <artifactId>lzw-common</artifactId>
+            <groupId>com.lzw.common</groupId>
+            <version>${lzw.latest.version}</version>
+        </dependency>
+        <!-- swagger -->
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+    </dependencies>
 </project>
