--- a/lzw-item/lzw-item-service/pom.xml
+++ b/lzw-item/lzw-item-service/pom.xml
@@ -4,19 +4,26 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>lzw-item</artifactId>
-        <groupId>com.lzw</groupId>
-        <version>${project.version}</version>
+        <groupId>com.lzw.service</groupId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>lzw-item-service</artifactId>
-
+    <groupId>com.lzw.service</groupId>
+    <version>1.0.0-SNAPSHOT</version>
 
     <dependencies>
+
         <dependency>
-            <groupId>com.lzw</groupId>
+            <artifactId>lzw-common</artifactId>
+            <groupId>com.lzw.common</groupId>
+            <version>${lzw.latest.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.lzw.service</groupId>
             <artifactId>lzw-item-interface</artifactId>
-            <version>${project.version}</version>
+            <version>${lzw.latest.version}</version>
         </dependency>
 
         <!--Eureka客户端-->
@@ -45,9 +52,39 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
-
-
-
+        <!--mybatis-plus启动器-->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
+        <!--druid连接池-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+        </dependency>
+        <!-- swagger -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${springfox.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${springfox.version}</version>
+        </dependency>
     </dependencies>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+    </build>
 
 </project>
