--- a/lzw-item/pom.xml
+++ b/lzw-item/pom.xml
@@ -8,9 +8,10 @@
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 
-	<groupId>com.lzw</groupId>
+	<groupId>com.lzw.service</groupId>
 	<artifactId>lzw-item</artifactId>
 	<packaging>pom</packaging>
+    <version>1.0-SNAPSHOT</version>
 
 	<name>lzw-item</name>
 	<description>Demo project for Spring Boot</description>
