--- a/eureka-Server/src/main/resources/application.yml
+++ b/eureka-Server/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: 192.168.0.101
   client:
     registerWithEureka: false
     fetchRegistry: false
