--- a/config-Server/src/main/resources/application.yml
+++ b/config-Server/src/main/resources/application.yml
@@ -18,6 +18,6 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8000/eureka/
+      defaultZone: http://192.168.0.101:8000/eureka/
 
 
