--- a/config-Server/src/main/resources/application.yml
+++ b/config-Server/src/main/resources/application.yml
@@ -18,6 +18,8 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://192.168.0.102:8000/eureka/
-
+      defaultZone: http://192.168.1.160:8000/eureka/
+  instance:
+    # 注册时使用ip而不是主机名
+    prefer-ip-address: true
 
