--- a/eureka-Server/src/main/resources/application.yml
+++ b/eureka-Server/src/main/resources/application.yml
@@ -7,7 +7,9 @@ spring:
 
 eureka:
   instance:
-    hostname: 192.168.0.102
+    hostname: localhost
+    # 注册时使用ip而不是主机名
+    prefer-ip-address: true
   client:
     registerWithEureka: false
     fetchRegistry: false
