--- a/lzw-item/lzw-item-service/src/main/resources/bootstrap.yml
+++ b/lzw-item/lzw-item-service/src/main/resources/bootstrap.yml
@@ -92,6 +92,9 @@ eureka:
   client:
       serviceUrl:
         defaultZone: http://192.168.0.102:8000/eureka/
+  instance:
+    # 注册时使用ip而不是主机名
+    prefer-ip-address: true
 
 logging:
   level:
