--- a/config-Server/src/main/resources/application.yml
+++ b/config-Server/src/main/resources/application.yml
@@ -21,5 +21,5 @@ eureka:
       defaultZone: http://172.17.0.2:8000/eureka/
   instance:
     # 注册时使用ip而不是主机名
-    prefer-ip-address: true
+    #prefer-ip-address: true
 
