--- a/eureka-Server/src/main/resources/application.yml
+++ b/eureka-Server/src/main/resources/application.yml
@@ -9,7 +9,7 @@ eureka:
   instance:
     hostname: localhost
     # 注册时使用ip而不是主机名
-    prefer-ip-address: true
+    #prefer-ip-address: true
   client:
     registerWithEureka: false
     fetchRegistry: false
