--- a/lzw-upload/src/main/resources/bootstrap.yml
+++ b/lzw-upload/src/main/resources/bootstrap.yml
@@ -18,7 +18,7 @@ eureka:
         defaultZone: http://192.168.0.102:8000/eureka/
   instance:
     # 注册时使用ip而不是主机名
-    prefer-ip-address: true
+    #prefer-ip-address: true
 
 #FastDFS
 fdfs:
