--- a/config-Server/src/main/resources/application.yml
+++ b/config-Server/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://172.17.0.2:8000/eureka/
+      defaultZone: http://localhost:8000/eureka/
   instance:
     # 注册时使用ip而不是主机名
     #prefer-ip-address: true
