--- a/lzw-item/lzw-item-service/src/main/resources/bootstrap.yml
+++ b/lzw-item/lzw-item-service/src/main/resources/bootstrap.yml
@@ -91,7 +91,7 @@ mybatis-plus:
 eureka:
   client:
       serviceUrl:
-        defaultZone: http://192.168.1.160:8000/eureka/
+        defaultZone: http://localhost:8000/eureka/
   instance:
     # 注册时使用ip而不是主机名
     #prefer-ip-address: true
